fix: npm and spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,21 +21,12 @@ html {
 }
 
 body {
-	background-color: var(--bg-color);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 
 	width: 100%;
 	height: 100%;
-}
-
-.body-container {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	overflow-y: auto;
-	width: 100%;
 }
 
 #title-name::after {
@@ -96,7 +87,7 @@ li::marker {
 }
 
 strong {
-	color: var(--hero-color);
+	font-weight: bold;
 }
 
 article p>a {
